--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
     <script src="./app.js"></script>
 </head>
-<body>
-<script>
-    
-</script>    
+<body style="background-color: #1C1B21; text-align: center;">
+    <img src="./logo.jpeg" alt="">
 </body>
 </html>
